force-app/main/default/objects/Process_Rewards_Event__e/Process_Rewards_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event used as part of Accrual/Purchase process to 1. Issue reward vouchers and 2. Splitting redemption/reward journals</description>
    <label>Process Rewards Event</label>
    <pluralLabel>Process Rewards Events</pluralLabel>
</CustomObject>