force-app/main/default/objects/Process_Rewards_Event__e/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Channel associated with the Order</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>