force-app/main/default/objects/Process_Rewards_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Event type: Issue voucher or split redemption journals</description>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>