force-app/main/default/objects/Process_Rewards_Event__e/fields/Order_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_No__c</fullName>
    <label>Order Item No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>