force-app/main/default/objects/Process_Rewards_Event__e/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <label>Program ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>