force-app/main/default/objects/Process_Rewards_Event__e/fields/Total_Debit_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Debit_Points__c</fullName>
    <label>Total Debit Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>