force-app/main/default/objects/Process_Rewards_Event__e/fields/Total_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Total_Rewards__c</fullName>
    <label>Total Rewards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>